ChmSee 1.3.0-rc1 2010--12-01
----------------------------
* Use XDG Base Directory Specification for config and bookshelf cache
* Starup splash screen removed
* Add global font setting
* Fix a bug which get homepage from #STRINGS
* Change Prev&Next page hotkey from Alt to Control.

ChmSee 1.2.0 2010-07-23
-----------------------
* Add previous and next page function
* Improve language charset setting
* Open specified page in file.chm::page.html format
* Display progress bar during file extraction
* Fix hhk keyword parse problem
* Fix filename case insensitive checking bug
* Need gtk+ >= 2.20 for gecko multi-threads compatible

ChmSee 1.1.0 2010-04-12
-----------------------
* Only support Gecko > 1.9 (Firefox3)
* Need gtk+ >= 2.16 (for using gtkbuilder and g_uri functions)
* Add index page filter string (Thanks Mingxi Wu)
* Add page find function
* Add Recent Files feature
* Add loading last file at starup option

ChmSee 1.0.7 2009-09-14
-----------------------

Features
~~~~~~~~

* issue 47: jump to specify index page from command line.

Bugs
~~~~

* issue 43: honor GTK toolbar settings
* issue 44: support xulrunner 1.9.1.
* issue 46: fix compile error (on some system, the xulrunner develop package
  does not depends on nspr develop package)
* issue 48: support xulrunner 1.8 again.

l10n
~~~~

* New: de, zh_TW
* Updated: es, ru, sv, zh_CN


ChmSee 1.0.6 2009-07-12
-----------------------

Features
~~~~~~~~

* issue 31: add index tab in left-pane (if chm file has index)

Bugs
~~~~

* issue 29: don't alert when open a chm file and the homepage url is invalid.
* issue 30: init libgcrypt, thanks patch from lubekgc.
* issue 33: close file in fullscreen mode cause chmsee no longer works.
* issue 34: more keyboard shortcur under fullscreen mode.
* issue 35: fix segmentation fault when closing.
* issue 40: keep html page position when switch between fullscreen and normal mode.
* issue 41: when chm file has no title, show the filename in the title.