@@ -1,10 +1,11 @@
-ChmSee 1.3.0-rc1 2010--12-01
+ChmSee 1.3.0-rc2 2010--12-14
 ----------------------------
 * Use XDG Base Directory Specification for config and bookshelf cache
 * Starup splash screen removed
 * Add global font setting
 * Fix a bug which get homepage from #STRINGS
-* Change Prev&Next page hotkey from Alt to Control.
+* Change Prev&Next page hotkey from Alt to Control
+* Fix filter bug in cs_tree_view
 
 ChmSee 1.2.0 2010-07-23
 -----------------------
